WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313375
Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-ratio-049.html -050.html
https://bugs.webkit.org/show_bug.cgi?id=313375
Summary
Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/flex-aspect-r...
alan
Reported
2026-04-26 17:55:15 PDT
ssia
Attachments
Patch
(7.29 KB, patch)
2026-04-26 18:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.29 KB, patch)
2026-04-27 05:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.32 KB, patch)
2026-04-27 05:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.36 KB, patch)
2026-04-27 08:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-26 18:09:53 PDT
Created
attachment 479317
[details]
Patch
alan
Comment 2
2026-04-27 05:27:48 PDT
Created
attachment 479327
[details]
Patch
alan
Comment 3
2026-04-27 05:32:14 PDT
Created
attachment 479329
[details]
Patch
alan
Comment 4
2026-04-27 08:03:56 PDT
Created
attachment 479335
[details]
[fast-cq]Patch
EWS
Comment 5
2026-04-27 10:43:53 PDT
Committed
312108@main
(ba1f174f16fc): <
https://commits.webkit.org/312108@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479335
[details]
.
Radar WebKit Bug Importer
Comment 6
2026-04-27 10:44:11 PDT
<
rdar://problem/175690028
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug